--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -15,8 +15,10 @@
         <p id="resultado">Cada amigo tiene que pagar: </p>
         <script>
             // Declaramos las constantes kTOTAL y kPERSONAS
-            
+            const total=102;
+            const personas=6;
             // Declaramos la variable resultado y calculamos la división de reparto
+            var resultado=total/personas;
             
             // Mostramos el resultado por consola
             console.log('Cada amigo tiene que pagar: '+resultado+' €uros.');
