--- a/ejercicio8.html
+++ b/ejercicio8.html
@@ -14,7 +14,7 @@
                 document.writeln("------------------------------<br/>");
               
                 for(var j=0; j<10; j++){
-                    document.writeln(i*j+"<br/>");
+                    document.writeln(i+" x "+j+" = "+(i*j)+"<br/>");
                 }
                 document.writeln("<br/>");
             }
