--- a/ejercicio9.html
+++ b/ejercicio9.html
@@ -22,6 +22,17 @@
                 document.writeln("<br/>");
                 i++;
             mientras i<=10 */
+            do{
+                document.writeln("Tabla de multiplicar del "+i+"<br/>");
+                document.writeln("-----------------------------------------<br/>");
+                let j=0;
+                do{
+                    document.writeln(i+" x "+j+" = "+(i*j)+"<br/>");
+                    j++;
+                }while(j<=10);
+                document.writeln("<br/>");
+                i++;
+            }while(i<=10);
         </script>
     </body>
 </html>
