--- a/ejercicio10.html
+++ b/ejercicio10.html
@@ -8,7 +8,7 @@
         <h1>Ejercicio 10. Bucle while: Tabla de multiplicar</h1>
         <p>Modifique este HTML</p>
         <script>
-            let i=0;
+            let i = 0;
             /* ESCRIBE TU CODIGO AQUI
             mientras i<=10 hacer
                 document.writeln("Tabla de multiplicar del "+i+"<br/>");
@@ -22,6 +22,17 @@
                 document.writeln("<br/>");
                 i++;
             fmientras i */
+            while (i <= 10) {
+                document.writeln("Tabla de multiplicar del " + i + "<br/>");
+                document.writeln("-----------------------------------------<br/>");
+                let j = 0;
+                while (j <= 10) {
+                    document.writeln(i + " x " + j + " = " + (i * j) + "<br/>");
+                    j++;
+                }
+                document.writeln("<br/>");
+                i++;
+            }
         </script>
     </body>
 </html>
